tests/snapshots/run_wpt_conformance__onnx_dequantizeLinear_uint4_1D_tensor_of_odd_size_with_float16_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "dequantizeLinear.https.any.js",
    "dequantizeLinear uint4 1D tensor of odd size with float16 1D scale",
    "onnx",
    "PASS",
)
