tests/snapshots/run_wpt_conformance__onnx_dequantizeLinear_uint4_4D_tensor_with_broadcasting_float32_4D_scale_and_uint4_4D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "dequantizeLinear.https.any.js",
    "dequantizeLinear uint4 4D tensor with broadcasting float32 4D scale and uint4 4D zeroPoint",
    "onnx",
    "PASS",
)
