tests/snapshots/run_wpt_conformance__onnx_dequantizeLinear_with_float16_3D_scale_as_an_intermediate_node.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "dequantizeLinear.https.any.js",
    "dequantizeLinear with float16 3D scale as an intermediate node",
    "onnx",
    "PASS",
)
